--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "devDependencies": {
     "husky": "^4.2.3",
     "lint-staged": "^10.0.9",
-    "prettier": "^2.0.2"
+    "prettier": "2.0.2"
   },
   "scripts": {
     "lint-check": "prettier --check \"**/*.{js,json,css,md,html,yml,yaml}\"",
