--- a/site/package.json
+++ b/site/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "isomorphic-unfetch": "^3.0.0",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^1.5.2",
     "next": "9.3.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
