--- a/site/package.json
+++ b/site/package.json
@@ -5,13 +5,21 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "isomorphic-unfetch": "^3.0.0",
+    "lodash": "^4.17.15",
     "next": "9.3.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "shopify-buy": "^2.9.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "babel-jest": "^25.2.3",
+    "jest": "^25.2.3",
+    "react-test-renderer": "^16.13.1"
   }
 }
