--- a/site/package.json
+++ b/site/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@testing-library/react": "^10.0.2",
     "babel-jest": "^25.2.3",
     "jest": "^25.2.3",
     "react-test-renderer": "^16.13.1"
